Setting up the database

--- a/CarLoan-UserProfile/src/main/resources/application.properties
+++ b/CarLoan-UserProfile/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8443
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/carloan
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=
+spring.datasource.password=root
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
