--- a/CarLoan-UserProfile/src/main/resources/application.properties
+++ b/CarLoan-UserProfile/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/carloan
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=
 spring.datasource.password=root
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto = update
