Loan processing: Initial commit

--- a/CarLoan-LoanProcessing/src/main/resources/application.properties
+++ b/CarLoan-LoanProcessing/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+server.port=8444
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/carloan
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+userprofile.service=http://localhost:8443/api/v1/user
