--- a/CarLoan-LoanProcessing/src/main/resources/application.properties
+++ b/CarLoan-LoanProcessing/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=LoanProcessing-Service
 server.port=8444
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
@@ -7,5 +8,8 @@ spring.datasource.username=
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 userprofile.service=http://localhost:8443/api/v1/user
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
