--- a/CarLoan-UserProfile/src/main/resources/application.properties
+++ b/CarLoan-UserProfile/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=UserProfile-Service
 server.port=8443
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
@@ -7,4 +8,7 @@ spring.datasource.username=
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
