--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>CarLoan-UserProfile</module>
         <module>CarLoan-LoanProcessing</module>
+        <module>service-discovery-server</module>
     </modules>
 
 </project>
