Eureka: Application properties changes

--- a/CarLoan-LoanProcessing/src/main/resources/application.properties
+++ b/CarLoan-LoanProcessing/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.application.name=LoanProcessing-Service
+spring.application.name=loanprocessing
 server.port=8444
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/carloan
+spring.datasource.url=jdbc:postgresql://postgres:5432/carloan
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-userprofile.service=http://localhost:8443/api/v1/user
+userprofile.service=http://userprofile:8443/api/v1/user
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://servicediscovery:8761/eureka
+
