--- a/CarLoan-UserProfile/src/main/resources/application.properties
+++ b/CarLoan-UserProfile/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=UserProfile-Service
+spring.application.name=userprofile
 server.port=8443
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/carloan
+spring.datasource.url=jdbc:postgresql://postgres:5432/carloan
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://servicediscovery:8761/eureka
